[gd_scene load_steps=38 format=2]

[ext_resource path="res://KinematicBody2D.gd" type="Script" id=1]
[ext_resource path="res://Player/Idle/spr_m_traveler_idle_anim-1.png" type="Texture" id=2]
[ext_resource path="res://Player/Idle/spr_m_traveler_idle_anim-2.png" type="Texture" id=3]
[ext_resource path="res://Player/Idle/spr_m_traveler_idle_anim-3.png" type="Texture" id=4]
[ext_resource path="res://Player/Idle/spr_m_traveler_idle_anim-4.png" type="Texture" id=5]
[ext_resource path="res://Player/Idle/spr_m_traveler_idle_anim-5.png" type="Texture" id=6]
[ext_resource path="res://Player/Idle/spr_m_traveler_idle_anim-6.png" type="Texture" id=7]
[ext_resource path="res://Player/Idle/spr_m_traveler_idle_anim-7.png" type="Texture" id=8]
[ext_resource path="res://Player/Jumping/spr_m_traveler_jump_complete_anim-2.png" type="Texture" id=9]
[ext_resource path="res://Player/Jumping/spr_m_traveler_jump_complete_anim-3.png" type="Texture" id=10]
[ext_resource path="res://Player/Jumping/spr_m_traveler_jump_complete_anim-4.png" type="Texture" id=11]
[ext_resource path="res://Player/Jumping/spr_m_traveler_jump_complete_anim-5.png" type="Texture" id=12]
[ext_resource path="res://Player/Jumping/spr_m_traveler_jump_complete_anim-6.png" type="Texture" id=13]
[ext_resource path="res://Player/Jumping/spr_m_traveler_jump_complete_anim-7.png" type="Texture" id=14]
[ext_resource path="res://Player/Jumping/spr_m_traveler_jump_complete_anim-8.png" type="Texture" id=15]
[ext_resource path="res://Player/Jumping/spr_m_traveler_jump_complete_anim-9.png" type="Texture" id=16]
[ext_resource path="res://Player/Jumping/spr_m_traveler_jump_complete_anim-11.png" type="Texture" id=17]
[ext_resource path="res://Player/Jumping/spr_m_traveler_jump_complete_anim-12.png" type="Texture" id=18]
[ext_resource path="res://Player/Jumping/spr_m_traveler_jump_complete_anim-13.png" type="Texture" id=19]
[ext_resource path="res://Player/Jumping/spr_m_traveler_jump_complete_anim-14.png" type="Texture" id=20]
[ext_resource path="res://Player/Jumping/spr_m_traveler_jump_complete_anim-15.png" type="Texture" id=21]
[ext_resource path="res://Player/Jumping/spr_m_traveler_jump_complete_anim-16.png" type="Texture" id=22]
[ext_resource path="res://Player/Jumping/spr_m_traveler_jump_complete_anim-17.png" type="Texture" id=23]
[ext_resource path="res://Player/Jumping/spr_m_traveler_jump_complete_anim-18.png" type="Texture" id=24]
[ext_resource path="res://Player/Jumping/spr_m_traveler_jump_complete_anim-19.png" type="Texture" id=25]
[ext_resource path="res://Player/Jumping/spr_m_traveler_jump_complete_anim-0.png" type="Texture" id=26]
[ext_resource path="res://Player/Jumping/spr_m_traveler_jump_complete_anim-1.png" type="Texture" id=27]
[ext_resource path="res://Player/Running/spr_m_traveler_run_anim-0.png" type="Texture" id=28]
[ext_resource path="res://Player/Running/spr_m_traveler_run_anim-1.png" type="Texture" id=29]
[ext_resource path="res://Player/Running/spr_m_traveler_run_anim-2.png" type="Texture" id=30]
[ext_resource path="res://Player/Running/spr_m_traveler_run_anim-3.png" type="Texture" id=31]
[ext_resource path="res://Player/Running/spr_m_traveler_run_anim-4.png" type="Texture" id=32]
[ext_resource path="res://Player/Running/spr_m_traveler_run_anim-5.png" type="Texture" id=33]
[ext_resource path="res://Player/Jumping/spr_m_traveler_jump_complete_anim-10.png" type="Texture" id=34]
[ext_resource path="res://Background_Sprites/Sky.png" type="Texture" id=35]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "Idle",
"speed": 7.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ) ],
"loop": true,
"name": "Jump-up",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ) ],
"loop": true,
"name": "Jump-down",
"speed": 5.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 27 ) ],
"loop": true,
"name": "Pre-Jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ) ],
"loop": true,
"name": "Running",
"speed": 10.0
}, {
"frames": [ ExtResource( 34 ) ],
"loop": true,
"name": "Jump-mid",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]

custom_solver_bias = 0.0
radius = 13.0
height = 31.9308

[node name="Player" type="KinematicBody2D" index="0"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Player_Sprite" type="AnimatedSprite" parent="." index="0"]

frames = SubResource( 1 )
animation = "Idle"
frame = 3
playing = true
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

visible = false
position = Vector2( 0.429199, 3.43422 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="wallLeft_signal" type="RayCast2D" parent="." index="2"]

position = Vector2( 0, 15 )
rotation = 1.5708
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 15 )
collision_mask = 1
_sections_unfolded = [ "Pause", "Transform" ]

[node name="wallRight_signal" type="RayCast2D" parent="." index="3"]

position = Vector2( 0, 15 )
rotation = -1.5708
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 15 )
collision_mask = 1
_sections_unfolded = [ "Pause", "Transform" ]

[node name="Camera2D" type="Camera2D" parent="." index="4"]

position = Vector2( 0, 15 )
rotation = -1.5708
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = false
drag_margin_v_enabled = false
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Transform" ]

[node name="ParallaxBackground" type="ParallaxBackground" parent="." index="5"]

layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
scroll_offset = Vector2( 0, 0 )
scroll_base_offset = Vector2( 0, 0 )
scroll_base_scale = Vector2( 1, 1 )
scroll_limit_begin = Vector2( 0, 0 )
scroll_limit_end = Vector2( 0, 0 )
scroll_ignore_camera_zoom = false

[node name="Sky" type="Sprite" parent="ParallaxBackground" index="0"]

scale = Vector2( 2, 2 )
texture = ExtResource( 35 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]


